# vip

./: .gitattributes  Cargo.toml
src/: db.rs  main.rs  tv.rs
testhtml/: adam_curtis.html  comedy1.html  comedy2.html  cuckoo.html  delia_smiths_cookery_course.html  films1.html  food1.html  pop.html  uncle.html
