[package]
name = "vip"
version = "0.0.1"
authors = ["mswift42 <martin.haesler@gmail.com>"]
edition = "2018"

[dependencies]
select = "0.4.3"
url = "1.7.1"
reqwest = "0.9.19"
chashmap = "2.2.0"
crossbeam = "0.7.2"
hyper = { git = "https://github.com/hyperium/hyper" }
futures-preview = "=0.3.0-alpha.19" 
